fix broken layout in IE

--- a/app/components/collectionShow/collectionShow.scss
+++ b/app/components/collectionShow/collectionShow.scss
@@ -198,14 +198,15 @@ $semi_full_width: 997px;
 .shareAreaWrapper {
   position: absolute;
   bottom: -121px;
-  margin-left: -12px;
+  right: 0;
+  width: 214px;
   height: 110px;
   border-radius: 4px;
   border: 1px solid $gray2;
   background-color: white;
-  display: inline-flex;
+  display: flex;
+  flex-direction: column;
   padding: 16px;
-  justify-content: center;
   box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.1);
 
   &:before {
@@ -244,9 +245,11 @@ $semi_full_width: 997px;
   }
 
   .shareBtnsWrapper {
+    position: relative;
     display: flex;
-    position: absolute;
-    align-self: flex-end;
+    justify-content: center;
+    margin-top: 16px;
+    z-index: 2;
   }
 
   .shareBtn {
@@ -304,6 +307,7 @@ $semi_full_width: 997px;
 }
 
 .collectionHeaderBtnWrapper {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
